# ids706-miniProj78

./: .gitignore  Dockerfile  Makefile  README.md  performance_report.md  python_results.txt  requirements.txt  rust_results.txt  setup.py  test.txt  wealth_db.db  word_counts.db
.github/workflows/: report.yml  test.yml
src/: cli.py  generate_comparison_report.py
tests/: test_script.py
word_counter_py/: cli.py
word_counter_rust/: Cargo.toml  word_counts.db
word_counter_rust/src/: main.rs
